main cover is done

--- a/html/Main.html
+++ b/html/Main.html
@@ -51,6 +51,16 @@
             </ul>
         </nav>
       </section> -->
+      <main class="main">
+               <section class="main-image">
+                   <img src="../images/cover.jpg" alt="trevel-image" class="cover">
+                   <div class="main-image-text">
+                       <p>Travel Blog</p>
+                       <h1>Going Places</h1>
+                       <p>I haven’t been everywhere, but it’s on my list</p>
+                   </div>
+               </section>
+      </main>
 
       
 </body>
